--- a/views/reviews.ejs
+++ b/views/reviews.ejs
@@ -1,25 +1,28 @@
 <% include  partials/header.ejs %>
 <% if(reviews.length>0) { %>
-<h1 style="color:white; text-align:center;"> Recent Reviews </h1>
-<div class='row text-center' style="display:flex;flex-wrap:wrap;background: rgba(223, 240, 216, 0.35);border-radius: 10px;padding: 10px;padding-bottom: 0px;">
+<h1 style="color:white; text-align:center;"> Recent Reviews for "<%= reviewname %>"</h1>
+<div class='row text-center' style="display:flex;flex-wrap:wrap;border-radius: 10px;padding: 10px;padding-bottom: 0px;">
     <% reviews.forEach(function(movie){ %>
         <div class='col-lg-2 col-sm-6'>
             <div class='thumbnail'>
                 <a href="/review/<%= movie._id %>">
                   <img src="<%= movie.data.Poster %> " height=300 width=300>
                 </a>
-                <div class='caption'>
+                <div >
                     <h4> <a href="/movie/<%= movie.mid %>" ><%= movie.data.Title %> </a></h4>
                 </div>
-                <p>
+                <div>
                     <a href="/review/<%= movie._id %>">More info </a>
-                </p>
+                </div>
+                <div>
+                  Reviewer: <a href="/user/<%= movie.author.id %>"><%= movie.author.username %></a>
+                </div>
             </div>
         </div>
     <% }) %>
 </div>
 </div>
 <% } else {%>
-<h3 style="color:white;     margin-left: 20px;"> No reviews for "<%= reviewname %>", <a href="/home">Try again </h3>
+<h3 style="color:white;margin-left: 20px;"> No reviews for "<%= reviewname %>", <a href="/home">Try again </h3>
 <% } %>
 <% include partials/footer.ejs %>
