--- a/views/usearch.ejs
+++ b/views/usearch.ejs
@@ -11,7 +11,8 @@ h1,h3{
 <h1> Results for username "<%= key %>"</h1>
 <ul>
     <% users.forEach(function(user){ %>
-        <h3><li> <%= user.fname %> <%= user.lname %> <button class="btn btn-md btn-success" ><a href='/user/<%= user._id %>'> Visit Profile
+      <% if (user.id!==currentuser.id) {%>
+        <h3><li><%= user.fname %> <%= user.lname %> <button class="btn btn-md btn-success" ><a href='/user/<%= user._id %>'> Visit Profile
           <% if (currentuser.followed.indexOf(user._id)>-1){ %>
           <form action="/unfollow/<%= currentuser._id %>/<%= user._id %>" method="POST">
           <button class='btn btn-warning btn-md'>UnFollow <i class="glyphicon glyphicon-remove"> </i></button>
@@ -22,6 +23,7 @@ h1,h3{
           </form>
           <% } %>
         </a></button></li></h3>
+      <% } %>
     <% })%>
 </ul>
 
