--- a/views/home.ejs
+++ b/views/home.ejs
@@ -97,7 +97,7 @@ margin-bottom: -12px;
     <% } %>
     <% if(my_movies.length!==0) {%>
     <h2  class = "review" align="center">Your Reviews</h2>
-    <div class='row text-center' style="display:flex;flex-wrap:wrap;background: rgba(223, 240, 216, 0.35);border-radius: 10px;padding: 10px;padding-bottom: 0px;">
+    <div class='row text-center' style="display:flex;flex-wrap:wrap;border-radius: 10px;padding: 10px;padding-bottom: 0px;">
         <% my_movies.forEach(function(movie){ %>
             <div class='col-lg-2 col-sm-6'>
                 <div class='thumbnail'>
