--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -14,6 +14,7 @@
     body{
       background: url("/images/film_bg0.jpg");
       background-size:100%;
+      background-attachment: fixed;
     }
     .review{
       background: #00b09b;  /* fallback for old browsers */
