--- a/views/login.ejs
+++ b/views/login.ejs
@@ -15,6 +15,18 @@
     }
     </style>
 <body>
+  <div class="container" style="margin-top:20px;">
+    <% if (success && success.length>0) { %>
+      <div class="alert alert-success" role="alert">
+        <%= success %>
+      </div>
+    <% } %>
+    <% if (error && error.length>0) { %>
+      <div class="alert alert-danger" role="alert">
+        <%= error %>
+      </div>
+    <% } %>
+  </div>
 <div class="container">
     <div class="row">
 
