--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -105,3 +105,15 @@
             </div>
         </div>
     </nav>
+    <div class="container" style="margin-top:20px;">
+      <% if (success && success.length>0) { %>
+        <div class="alert alert-success" role="alert">
+          <%= success %>
+        </div>
+      <% } %>
+      <% if (error && error.length>0) { %>
+        <div class="alert alert-danger" role="alert">
+          <%= error %>
+        </div>
+      <% } %>
+    </div>
