--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -7,6 +7,12 @@
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="stylesheet" href="/stylesheets/main.css">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
+    <script type="text/javascript">
+    setTimeout(function() {
+        $('#flash-message').fadeOut('slow');
+    }, 2000);
+    </script>
     <style>
     h2{
       color: white;
@@ -76,6 +82,7 @@
 }
     </style>
     </head>
+
     <body>
         <nav class="navbar navbar-default">
         <div class="container-fluid">
@@ -105,7 +112,7 @@
             </div>
         </div>
     </nav>
-    <div class="container" style="margin-top:20px;">
+    <div class="container flash-message" id="flash-message" style="margin-top:20px;">
       <% if (success && success.length>0) { %>
         <div class="alert alert-success" style="font-size:16px; font-weight:bold;" role="alert">
           <%= success %>
