1. Comments interface changed. 2. Time and date displayed with comments. 3. Can't post empty comments.

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -4,6 +4,7 @@
         <title>
             Mini-Flick
         </title>
+        <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="stylesheet" href="/stylesheets/main.css">
@@ -18,6 +19,7 @@
       color: white;
     }
     body{
+      font-family: 'Open Sans', sans-serif;
       background: url("/images/film_bg0.jpg");
       background-size:100%;
       background-attachment: fixed;
