--- a/views/home.ejs
+++ b/views/home.ejs
@@ -79,7 +79,7 @@ margin-bottom: -12px;
          </div>
     </header>
     <% if(all_movies.length!==0) {%>
-    <h2 class="review" align="center"> Recent Reviews by Others</h2><br>
+    <h2 class="review" align="center"> Recent Reviews</h2><br>
     <div class='row text-center' style="display:flex;flex-wrap:wrap;border-radius: 10px;padding: 10px;padding-bottom: 0px;">
         <% all_movies.forEach(function(movie){ %>
             <div class='col-lg-2 col-sm-6'>
@@ -118,4 +118,37 @@ margin-bottom: -12px;
     </div>
     <% } %>
 </div>
+
+<!-- <script>
+function showHint(str) {
+    if (str.length == 0) {
+        document.getElementById("txtHint").innerHTML = "";
+        return;
+    } else {
+        var xmlhttp = new XMLHttpRequest();
+        var html = "";
+        xmlhttp.onreadystatechange = function() {
+            if (this.readyState == 4 && this.status == 200) {
+                var data = JSON.parse(this.responseText);
+                //document.getElementById("txtHint").innerHTML = data['loc_name'];
+                var len=0;
+                for(var key in ["gump","a","b"])
+                {
+                    len ++;
+                    //document.getElementById("txtHint").innerHTML = data[key]['loc_name'];
+                    console.log(key);
+                    html += "<option value='"+data[key]['loc_name']+"'>"+data[key]['loc_name']+"</option>";
+                }
+
+            }
+            $('#dropdown').html(html);
+            $('#dropdown').attr("size", len); // open dropdown
+
+        };
+
+        xmlhttp.open("GET", "gethint.php?q=" + str, true);
+        xmlhttp.send();
+    }
+}
+</script> -->
 <% include partials/footer.ejs %>
