--- a/views/review.ejs
+++ b/views/review.ejs
@@ -1,7 +1,11 @@
 <% include partials/header %>
+<% include functions.ejs %>
 <style>
 .big_font{
   font-size: 16px;
+}
+.comment-block{
+  background: white;
 }
 </style>
 
@@ -74,23 +78,46 @@
                 </form>
 
                 <hr>
-            <% movie.comments.forEach(function(comment){ %>
-                    <div class="row">
+            <% mlist=[] %>
+            <% movie.comments.forEach(function(comment){
+               mlist.push(comment)
+               newlist= mlist.sort(function(a, b) {
+                   return new Date(b.date) - new Date(a.date);
+                 });
+               });
+               %>
+               <% newlist.forEach(function(comment){ %>
+                    <div class="row comment-block">
                         <div class="col-md-12">
-                            <strong><%= comment.author.username %></strong>
-                            <p>
-                                <%= comment.text %>
-                            </p>
+                          <div>
+                          <div style="display:inline-block; font-size:14px;">
+                            <a href="/user/<%=comment.author.id%>"><strong><%= comment.author.username %></strong></a><br>
+                          </div>
                             <% if(currentuser && comment.author.id.equals(currentuser._id)) { %>
-                                <a  class="btn btn-xs btn-warning" href="/review/<%= movie._id %>/comments/<%= comment._id %>/edit">
+                              <div style="float:right; display:inline-block; font-size:11px; font-style:italic; opacity:0.7;">
+                                <%
+                                date=formatAMPM(comment.date);
+                                %>
+                                <%= date %>
+                              </div>
+                            <% } %>
+                          </div>
+                            <div>
+                              <div style="display:inline-block; font-style:italic; font-weight:500; font-size:16px;">
+                                <%= comment.text %>
+                              </div>
+                              <div style="display:inline-block; float:right;">
+                                <a  style="font-size:10px;  margin-top:-10px;" class="btn btn-xs btn-warning" href="/review/<%= movie._id %>/comments/<%= comment._id %>/edit">
                                     Edit
                                 </a>
                                 <form id="delete-form" action="/review/<%= movie._id %>/comments/<%= comment._id %>?_method=DELETE"   method="POST">
-                                <button class="btn btn-xs btn-danger"> Delete</button>
+                                <button class="btn btn-xs btn-danger" style="font-size:10px; margin-top:-10px;"> Delete</button>
                                 </form>
-                            <% } %>
+                              </div>
+                            </div>
                         </div>
                     </div>
+                    <br>
                 <% }) %>
             </div>
         </div>
@@ -98,3 +125,14 @@
 </div>
 
 <% include partials/footer %>
+
+<!-- //sorting by date
+data=[{_id: "5a1e52c94cb8610d5f0cc03b", text: 'ajnsndsn', __v: 0, date: 'Wed Nov 29 2017 02:25:13 GMT-0500 (EST)',
+author: { id: "59c0756ba155af18bde4e665", username: 'mohit' } },
+{ _id: "5a1e52ee4cb8610d5f0cc03c", text: 'xancncncanc', __v: 0, date: 'Wed Nov 29 2017 01:25:50 GMT-0500 (EST)',
+author: { id: "59c0756ba155af18bde4e665", username: 'mohit' } },
+{ _id: "5a1e52f24cb8610d5f0cc03d", text: 'cancnacn', __v: 0, date: 'Wed Nov 29 2017 12:25:54 GMT-0500 (EST)',
+author: { id: "59c0756ba155af18bde4e665", username: 'mohit' } }]
+data.sort(function(a, b) {
+    return new Date(a.date) - new Date(b.date);
+}) -->
