--- a/views/register.ejs
+++ b/views/register.ejs
@@ -15,7 +15,7 @@
     <div class="row">
         <div style="width:30% ; margin:75px auto;">
             <h2 style="text-align:center;">Register Yourself !!</h2>
-            <form action="/register" method="POST"> <!--send the POST data to post.campgrounds-->
+            <form action="/register" method="POST">
                 <div class="form-group">
                     <input class="form-control" type="text" name="fname" placeholder="Firstname">
                 </div>
