--- a/views/home.ejs
+++ b/views/home.ejs
@@ -48,7 +48,7 @@ margin-bottom: -12px;
                 <p class="form-container">
                   <form class="form_search" action="/results" method="GET">
                       <div class="input-group input-group-xs">
-                        <input type="text" class="form-control" name="search" placeholder="Add Reviews">
+                        <input type="text" class="form-control" name="search" placeholder="Search Movies">
                         <div class="input-group-btn">
                           <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
                         </div>
@@ -56,7 +56,7 @@ margin-bottom: -12px;
                   </form>
                   <form class="form_review" action="/reviewSearch" method="GET">
                       <div class="input-group input-group-xs">
-                        <input type="text" class="form-control" name="review_key" placeholder="Search Reviews">
+                        <input type="text" class="form-control" name="review_key" placeholder="Search Reviews by Users">
                         <div class="input-group-btn">
                           <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
                         </div>
