--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -23,8 +23,8 @@
 
     <div id="landing-header">
  		<h1>Welcome to Mini-Flick</h1>
-		<a href="/login" class="btn btn-lg btn-success"> Login </a><br><br>
-        <a href="/register" class="btn btn-lg btn-success"> Register</a>
+		<a href="/login" class="btn btn-lg btn-success"> Sign In </a><br><br>
+        <a href="/register" class="btn btn-lg btn-success"> Sign Up</a>
     </div>
 
     <ul class="slideshow">
